--- a/projetos pessoais git/estilos/style.css
+++ b/projetos pessoais git/estilos/style.css
@@ -25,3 +25,152 @@ body {
 
 }
 
+header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor6));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
+    
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 3em;
+    font-weight: normal;
+    text-shadow: 2px 2px 2px var(--cor6);
+    
+}
+
+header > p {
+    color: var(--cor1);
+    text-shadow: 1px 1px 1px var(--cor6);
+    
+}
+
+p.p1 {
+    text-align: right;
+    padding-top: 40px;
+    padding-right: 15px;
+
+}
+
+nav {
+    background-color: var(--cor5);
+    
+}
+
+nav > a {
+    color: var(--cor2);
+    font-weight: bold;
+    padding: 0px 10px 0px 10px;
+    text-decoration: none;
+    transition-duration: 0.2s;
+
+
+}
+
+nav >a:hover {
+    background-color: var(--cor1);
+    color: var(--cor5);
+    border-radius: 5px;
+    text-decoration: underline;
+
+}
+
+main {
+    background-color: var(--cor2);
+    min-width: 240px;
+    max-width: 800px;
+    margin: auto;
+    padding: 0px 20px 20px 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
+    border-radius: 0px 0px 10px 10px;
+    margin-bottom: 30px;
+
+}
+
+article {
+    background-color: white;
+    margin-top: 0%
+}
+
+article > h1 {
+    margin-bottom: -5px;
+    text-align: center;
+    background-color: var(--cor4);
+    color: white;
+    text-shadow: 2px 2px 2px var(--cor5);
+
+}
+
+article > p {
+    text-align: justify;
+    text-indent: 30px;
+    padding: 10px 10px 10px 10px;
+    margin-top: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.308);
+
+}
+
+article > p.return {
+    text-align: center;
+    font-weight: bold;
+    background-color: var(--cor4);
+    color: white;
+    text-shadow: 2px 2px 2px var(--cor5);
+
+}
+
+article >p.return a {
+    color: var(--cor1);
+    text-decoration: none;
+    background-color: var(--cor2);
+    border-radius: 5px;
+    padding: 3px;
+
+    
+}
+
+article >p.return a:hover {
+    color: var(--cor6);
+    text-decoration: underline;
+}
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px 10px 10px 10px;
+    text-align: justify;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.308);
+
+}
+
+aside > h2 {
+    background-color: var(--cor4);
+    margin: -10px -10px 10px;
+    text-align: center;
+    border-radius: 0px 0px 5px 5px;
+    color: white;
+    text-shadow: 2px 2px 2px var(--cor5);
+    
+}
+
+aside > p {
+    text-align: justify;
+    
+}
+
+aside > ul {
+    padding-top: 10px;
+    list-style-position: inside;
+    columns: 2;
+
+}
+
+footer {
+    background-color: var(--cor4);
+
+}
+
