--- a/projetos pessoais git/estilos/style.css
+++ b/projetos pessoais git/estilos/style.css
@@ -112,7 +112,8 @@ article {
 }
 
 article > h1 {
-    margin-bottom: -5px;
+    margin-bottom: 0px;
+    padding-bottom: 5px;
     text-align: center;
     background-color: var(--cor4);
     color: white;
@@ -129,6 +130,8 @@ article > p {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.308);
 
 }
+
+
 
 article > p.return {
     text-align: center;
@@ -154,6 +157,136 @@ article >p.return a:hover {
     text-decoration: underline;
 }
 
+article > div.post {
+    text-align: justify;
+    text-indent: 30px;
+    padding: 10px;
+
+}
+
+article > div.post > h2 {
+    text-align: center;
+    background-color: var(--cor4);
+    color: white;
+    text-shadow: 2px 2px 2px var(--cor5);
+    padding: 5px;
+    margin-top: 0px;
+    border-radius: 5px;
+
+}
+
+article > div.post > p {
+    text-align: justify;
+    padding-top: 10px;
+    margin-top: 0px;
+    border-radius: 5px;
+    text-indent: 30px;
+}
+
+article > div.post > p.ptxt {
+    text-align: end;
+    background-color: var(--cor2);
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
+    font-weight: bold;
+    margin-top: 10px;
+
+
+
+    box-shadow: 2px 2px  rgba(0, 0, 0, 0.308);
+}
+
+
+
+.artigos {
+    display: flex;
+    flex-direction:row
+    
+}
+
+.artigos > p {
+    text-align: center;
+    font-weight: normal;
+    background-color: white;
+    color: black;
+    padding: 0px;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.308);
+    margin-right: 10px;
+    
+}
+
+.artigos > .art-foto {
+    width: 280px;
+    height: 180px;
+    border-radius: 16px;
+    padding: 10px;
+}
+
+.artigos > div {
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: flex-start;
+    width: 100%;
+    background-color: var(--cor1);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.253);
+    border-radius: 5px;
+}
+
+.artigos > div > a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    align-self: center;
+    padding-top: 10px;
+    background-color: var(--cor4);
+    border-radius: 10px;
+    padding: 5px;
+    margin-top: 10px;
+    transition-duration: 0.2s;
+
+}
+
+.artigos > div > a:hover {
+    color: var(--cor1);
+    background-color: var(--cor6);
+    text-decoration: underline;
+    font-weight: bold;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.308);
+}
+
+.artigos > div > p.p1 {
+    font-weight: normal;
+    font-size: 1.2em;
+    color: white;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.767);
+    margin-bottom: 20px;
+    text-align: center;
+    background-image: linear-gradient(to bottom, var(--cor6), var(--cor1));
+    padding-top: 15px;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.artigos > div > p.p2 {
+    font-weight: normal;
+    font-size: 0.8em;
+    color: var(--cor6);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.178);
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 0 0 5px 5px;
+}
 div.video {
     background-color: var(--cor6);
     margin: 0px 0px 5px 0px;
